--- a/Rewrite/General.conf
+++ b/Rewrite/General.conf
@@ -44,6 +44,7 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io, app.biliintl.com,passp
 ^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.hyperionics.com/
 ^https?:\/\/(www.)?iconworkshop\.cn\/ url 302 https://www.axialis.com/
 ^https?:\/\/(www.)?idmchina\.net\/ url 302 https://www.internetdownloadmanager.com/
+^https?:\/\/(www.)?imazingchina\.com\/ url 302 https://imazing.com/zh
 ^https?:\/\/(www.)?imindmap\.cc\/ url 302 https://www.ayoa.com/previously-imindmap/
 ^https?:\/\/(www.)?jihehuaban\.com\.cn\/ url 302 https://www.chartwellyorke.com/sketchpad/x24795.html
 ^https?:\/\/hypersnap\.mairuan\.com\/ url 302 https://www.keyshot.com/
@@ -58,6 +59,7 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io, app.biliintl.com,passp
 ^https?:\/\/(www.)?nicelabel\.cc\/ url 302 https://www.nicelabel.com/zh/
 ^https?:\/\/(www.)?ntfsformac\.cc\/ url 302 https://www.tuxera.com/products/tuxera-ntfs-for-mac-cn/
 ^https?:\/\/(www.)?ntfsformac\.cn\/ url 302 https://china.paragon-software.com/home-mac/ntfs-for-mac/
+^https?:\/\/(www.)?officesoftcn\.com\/ url 302 https://www.microsoft.com/zh-cn/microsoft-365
 ^https?:\/\/(www.)?overturechina\.com\/ url 302 https://sonicscores.com/
 ^https?:\/\/(www.)?passwordrecovery\.cn\/ url 302 https://cn.elcomsoft.com/aopr.html
 ^https?:\/\/(www.)?pdfexpert\.cc\/ url 302 https://pdfexpert.com/zh
@@ -74,7 +76,7 @@ hostname = www.google.cn,www.firefox.com.cn,api.abema.io, app.biliintl.com,passp
 ^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
 
 # bstar intl
-(^https?:\/\/app\.biliintl\.com\/(x\/)?(intl|dm|reply|history|v\d/msgfeed).+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$5&sim_code=51503$7
+(^https?:\/\/app\.biliintl\.com\/(x\/)?(intl|dm|reply|history|v\d\/(fav|msgfeed)).+?)(&s_locale=zh-Hans_[A-Z]{2})(.+?)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$6&sim_code=51503$8
 
 ^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/(sms\/send|reg\/sms|oauth2\/access_token|login\/sms) url script-request-body https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Rewrite/bstar.js
 (^https?:\/\/passport\.biliintl\.com\/x\/intl\/passport-login\/.+)(&s_locale=zh-Hans_[A-Z]{2})(.+)(&sim_code=\d+)(.+) url 302 $1&s_locale=zh-Hans_PH$35&sim_code=51503$5
