--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -263,6 +263,9 @@ final, 🕹 终极清单
 
 
 
+
+
+
 # DivineEngine Quantumult 配置示例
 #
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
@@ -288,12 +291,12 @@ server_check_url=http://cp.cloudflare.com/generate_204
 
 # DNS 排除列表
 # dns_exclusion_list 包含了禁用占位符 IP (240.*) 的域，不在 dns_exclusion_list 中的域都启用了占位符 IP，并打开了 resolve-on-remote 设置。
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
 
 # Quantumult 将不会处理到 excluded_routes 的流量。修改后最好重新启动您的设备。
 ;excluded_routes=192.168.0.0/16, 172.16.0.0/12, 100.64.0.0/10, 10.0.0.0/8
 # Hearthstone: 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
-excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.112.158/32, 182.162.132.1/32
+excluded_routes=239.255.255.250/32
 
 # 在网络环境切换时出发运行模式变更
 # filter - 规则分流，all_proxy - 全部代理，all_direct - 全部直连
