--- a/Rewrite/QuantumultX_Profiles.conf
+++ b/Rewrite/QuantumultX_Profiles.conf
@@ -1,4 +1,4 @@
-; 2022-03-28：增加对各个模块的说明(某些内容只适用于 1.0.28 以上版本)
+; 2022-03-28：增加对各个模块的说明(某些内容只适用于 1.0.28 以上版本) By:KOP-XIAO
 ;⚠️注意⚠️: 以下内容中，带“;” “#”的都是注释符号，去掉前面的符号，该行才有效
 
 ;general 模块内为一些通用的设置参数项
@@ -293,7 +293,7 @@ final, 🕹 终极清单
 
 
 
-# DivineEngine Quantumult 配置示例
+# DivineEngine Quantumult 配置示例 By:DivineEngine
 #
 # 以 ";" 或 "#" 或 "//" 开头的行为注释行。
 #
