--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -90,6 +90,9 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7} response-body <meta name="author" content="zyd">
 ^https:\/\/(www|cn)\.pornhub\.com\/_xa\/ads.* url reject
 
+# TextEditor   
+^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/TextEditor.js
+
 # TestFlight下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
 
