--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com,account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, api.polaxiong.com, api.rr.tv, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, *.amemv.com, aweme*.snssdk.com,*.pornhub.com,cn.pornhubpremium.com,buy.itunes.apple.com,testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com,account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, api.polaxiong.com, api.rr.tv, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, *.amemv.com, aweme*.snssdk.com,*.pornhub.com,cn.pornhubpremium.com,buy.itunes.apple.com,notability.com,testflight.apple.com
 
 
 
@@ -8,26 +8,11 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.
 # 酷我音乐 SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Kuwo.js
 
-# VSCO滤镜 VIP
-^https:\/\/(api\.revenuecat\.com\/v\d\/subscribers|vsco\.co\/api\/subscriptions\/\d\.\d\/user-subscriptions)\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/vsco.js
-
 # 大片(Bigshot) 视频编辑器 VIP
 ^https:\/\/vni\.kwaiying\.com\/api\/v1\/user\/profile url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/dapian.js
 
-# WPS (By eHpo)
-^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wps.js
-
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/CamScanner.js
-
-# VUE pro
-^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/VUE.js
-
-# NiChi 解锁素材
-^https?:\/\/m(p|ini-hk)\.bybutter\.com\/mood\/(official-templates|privileges) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/NiChi.js
-
-# PicsArt美易 pro
-^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/PicsArt.js
 
 # 百度网盘解除在线视频倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/BaiduCloud.js
@@ -60,28 +45,30 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu_plus.js
 ^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/zhihu_plus.js
 
-# Netflix评分 (yichahucha)
-^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
-
-# Document (By langkhach270389)
-^https:\/\/license\.pdfexpert\.com\/api\/.*\/documents\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Documents.js
-
-# Pdfexpert (By langkhach270389)
-^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Pdfexpert.js
-
-# Workingcopy
-^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
-
-# TikTok (By Choler)
-#^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/File/Aweme.js
-#^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Aweme.js
-
 # Bilibili 1080P+ (By NobyDa)
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/bilifj.js
 
 # Bilibili (By srk24)
 ^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/bilibili_splash.js
+
+# Document (By langkhach270389)
+^https:\/\/license\.pdfexpert\.com\/api\/.*\/documents\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Documents.js
+
+# Netflix评分 (yichahucha)
+^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-request-header https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+^https?://ios[-\w]*\.prod\.ftl\.netflix\.com/iosui/user/.+path=%5B%22videos%22%2C%\d+%22%2C%22summary%22%5D url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/nf_rating.js
+
+# NiChi 解锁素材
+^https?:\/\/m(p|ini-hk)\.bybutter\.com\/mood\/(official-templates|privileges) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/NiChi.js
+
+# Notability 解锁订阅
+^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/NotabilityProCrack.js
+
+# Pdfexpert (By langkhach270389)
+^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Pdfexpert.js
+
+# PicsArt美易 pro
+^https:\/\/api\.(picsart|meiease)\.c(n|om)\/users\/show\/me\.json url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/PicsArt.js
 
 # Pornhub
 ^https:\/\/(www|cn)\.pornhub.com url response-body <div class="topAdContainter">(\n.*){9}|<div class="premiumAdvertWrapper">(\n.*){5}|<div class="adContainer clearfix middleVideoAdContainer">(\n.*){7}|<div class="adContainer clearfix ad-tabSplit">(\n.*){7}|<div class="adContainer clearfix">(\n.*){7} response-body <meta name="author" content="zyd">
@@ -95,6 +82,22 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 # TestFlight下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId" : ".*", request-body storefrontId" : "143441-1,29",
+
+# TikTok (By Choler)
+#^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header https://raw.githubusercontent.com/passat/QuanX/main/File/Aweme.js
+#^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Aweme.js
+
+# VSCO滤镜 VIP
+^https:\/\/(api\.revenuecat\.com\/v\d\/subscribers|vsco\.co\/api\/subscriptions\/\d\.\d\/user-subscriptions)\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/vsco.js
+
+# VUE pro
+^https:\/\/api\.vuevideo\.net\/api\/v1\/(users\/.+\/profile|subtitle\/prepare) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/VUE.js
+
+# Workingcopy
+^https:\/\/education\.github\.com\/api\/user$ url response-body "student":false response-body "student":true
+
+# WPS (By eHpo)
+^https://account.wps.cn/api/users/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/Wps.js
 
 # YouTube去广告
 ^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
