--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -14,7 +14,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/CamScanner.js
 
-# 百度网盘解除在线视频倍率/清晰度
+# 百度网盘在线视频倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/File/BaiduCloud.js
 
 # 彩云天气 VIP (By NobyDa)
