--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -1,17 +1,10 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,app.bilibili.com,*.amemv.com,*.snssdk.com
+hostname = www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,*.amemv.com,*.snssdk.com
 
-# (By Choler)
-# > Douyin
+# > Douyin (By Choler)
 https?:\/\/(.+?)\.amemv\.com\/aweme\/v2\/feed\/ url request-header GET \/aweme\/v\d\/(.+\r\n) request-header GET /aweme/v1/$1
 https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/douyin.js
 
-# (By yichahucha)
-# > Weibo 
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wb_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wb_ad.js
-
-# (By blackmatrix7)
-# > Zhihu
+# > Zhihu (By blackmatrix7)
 # 知乎处理用户信息
 ^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu.js
 # 知乎信息流去广告
@@ -45,8 +38,3 @@ https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https:
 ^https?:\/\/s-api\.smzdm\.com\/sou\/filter\/tags\/hot_tags url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
 # 值会员权益中心banner广告
 ^https?:\/\/zhiyou\.m\.smzdm\.com\/user\/vip\/ajax_get_banner url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
-
-# (By srk24)
-# > bilibili
-^https?:\/\/app\.bilibili\.com\/x\/v\d\/splash\/list url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/bilibili_splash.js
-
