--- a/Rewrite/AdvertisingPlus.conf
+++ b/Rewrite/AdvertisingPlus.conf
@@ -1,4 +1,4 @@
-hostname = www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,*.amemv.com,*.snssdk.com
+hostname = oia.zhihu.com,link.zhihu.com,www.zhihu.com,api.zhihu.com,appcloud2.zhihu.com,app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com,m,*.amemv.com,*.snssdk.com
 
 # > Douyin (By Choler)
 https?:\/\/(.+?)\.amemv\.com\/aweme\/v2\/feed\/ url request-header GET \/aweme\/v\d\/(.+\r\n) request-header GET /aweme/v1/$1
@@ -22,20 +22,18 @@ https?:\/\/(.+?)\.amemv\.com\/aweme\/v\d\/feed\/ url script-response-body https:
 # 优化软件配置
 ^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihu.js
 
-// 知乎手机网页优化(如使用 APP 请勿添加本规则)
-// author: https://t.me/elecV2
-// QuanX 订阅地址：https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihu.conf
+# 知乎手机网页优化(如使用 APP 请勿添加本规则)
+# author: https://t.me/elecV2
+# QuanX 订阅地址：https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihu.conf
 
-hostname = oia.zhihu.com, link.zhihu.com, www.zhihu.com
-
-// 先重写到桌面版
+# 先重写到桌面版
 ^https:\/\/www\.zhihu\.com\/(question|topic) url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/85.0.4183.83 Safari/537.36$2
-// 再注入 CSS 进行优化
-^https:\/\/www\.zhihu\.com\/question url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihux.user.js
-^https:\/\/www\.zhihu\.com\/topic url script-response-body https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/betterweb/zhihux.user.js
-// 去掉知乎跳转第三方网站的中间页面
+# 再注入 CSS 进行优化
+^https:\/\/www\.zhihu\.com\/question url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihux.user.js
+^https:\/\/www\.zhihu\.com\/topic url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/zhihux.user.js
+# 去掉知乎跳转第三方网站的中间页面
 ^https?:\/\/link\.zhihu\.com/\?target=(https?)%3A//(.*) url 307 $1://$2
-// 不跳转应用商店
+# 不跳转应用商店
 ^https:\/\/oia\.zhihu\.com\/answers\/([0-9]+)\?.* url 307 https://www.zhihu.com/answer/$1
 ^https:\/\/oia\.zhihu\.com\/articles\/([0-9]+)\?.* url 307 https://zhuanlan.zhihu.com/p/$1
 
