--- a/Rewrite/Rewrite_lhie1.conf
+++ b/Rewrite/Rewrite_lhie1.conf
@@ -418,7 +418,7 @@ hostname = api.cognitive.microsofttranslator.com,offline.microsofttranslator.com
 ^https?:\/\/du\.hupucdn\.com\/\w+h\d{4} url reject-img
 ^https?:\/\/api\.yangkeduo\.com\/api\/cappuccino\/splash url reject-img
 ^https?:\/\/mp\.weixin\.qq\.com\/(s|mp)\/(ad_|advertisement|getappmsgad|report|appmsgreport|appmsgpicreport) url reject-img
-^https?:\/\/ap(i|p)\.bilibili\.com\/((x\/v2|pgc)\/(search\/defaultword|season\/rank\/cn|splash\/)|(pgc/season/rank/cn|x/v2/(rank.*?rid=(168|5)|search/(defaultword|hot|recommend|resource)))) url reject-img
+^https?:\/\/ap(i|p)\.bilibili\.com\/((x\/v2|pgc)\/(season\/rank\/cn|splash\/)|(pgc/season/rank/cn|x/v2/(rank.*?rid=(168|5)|search/(hot|recommend|resource)))) url reject-img
 ^https?:\/\/www\.zhihu\.com\/terms\/privacy\/confirm url reject-img
 ^https?:\/\/api\.zhihu\.com\/market\/popover url reject-img
 ^https?:\/\/api\.zhihu\.com\/search\/(top|tab|preset) url reject-img
@@ -426,7 +426,7 @@ hostname = api.cognitive.microsofttranslator.com,offline.microsofttranslator.com
 ^https?:\/\/api\.zhihu\.com\/commercial_api\/(launch|real_time) url reject-img
 ^https?:\/\/(api|www)\.zhihu\.com\/.*?(featured-comment-ad|recommendations|community-ad) url reject-img
 ^https?:\/\/(api|www)\.zhihu\.com\/(fringe|adx|commercial|ad-style-service|banners|mqtt) url reject-img
-^https?:\/\/interface3?\.music\.163\.com/eapi/(ad|abtest|sp|hot|store|mlog|search/(specialkeyword|defaultkeyword|hot)) url reject-img
+^https?:\/\/interface3?\.music\.163\.com/eapi/(ad|abtest|sp|hot|store|search/(specialkeyword|defaultkeyword|hot)) url reject-img
 ^https?:\/\/weibointl\.api\.weibo\.cn\/portal\.php\?a=get_coopen_ads url reject-img
 ^https?:\/\/yxyapi2\.drcuiyutao\.com\/yxy-api-gateway\/api\/json\/advert\/getsAd url reject-dict
 ^https?:\/\/capis-clb\.didapinche\.com\/ad\/ url reject-dict
