--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io, *google.cn, *google.com.hk, boxer.baidu.com, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -13,11 +13,26 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.
 # 扫描全能王 pro
 ^https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/CamScanner.js
 
+# 百度网盘手机页面优化
+^https:\/\/pan\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Windows Phone 10)$2
+
+# 百度防跳转
+#^https?:\/\/(?!d\.pcs).*(?<!map)\.baidu\.com url request-header (\r\n)User-Agent:.+iPhone.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
+
+# 百度防跳转
+^https?:\/\/.*\.baidu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (Linux; Android 9.0; iPhone; U; CPU iPhone OS 9_9_9 like Mac OS X; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36 T7/11.23 SP-engine/2.19.0 baiduboxapp (Baidu; P1 9.0)$2
+
+# 百度防跳转
+^https:\/\/boxer\.baidu\.com\/scheme\?scheme,script-path=https://raw.githubusercontent.com/passat/QuanX/main/Scripts/baidu-no-redirect.js
+
 # 百度网盘在线视频倍率/清晰度
 ^https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/BaiduCloud.js
 
 # 彩云天气 VIP (By NobyDa)
 ^https:\/\/biz\.caiyunapp\.com\/v2\/user\?app_name\=weather url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/ColorWeather.js
+
+# 微博网页跳转登陆屏蔽
+https://m\.weibo\.cn/comments/hotflow.*max_id=.* url reject-dict
 
 # 微博应用内广告 (yichahucha)
 ^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wb_launch.js
@@ -25,6 +40,9 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, mp.weixin.qq.com, www.
 
 # 白描黄金会员
 ^https?:\/\/baimiao\.uzero\.cn\/api\/v\d\.user\/appLaunchWithUser$ url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/baimiao.js
+
+# 知乎防跳转
+^https?:\/\/www\.zhihu\.com url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 13_5 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/13.1.1 Mobile/15E148 Safari/16C50 Quark/604.1 T7/10.3 SearchCraft/2.6.3 (Baidu; P1 8.0.0)$2
 
 # 知乎广告 (onewayticket255)
 ^https?:\/\/(api|www)\.zhihu\.com\/.*?(featured-comment-ad|recommendations|community-ad) url reject-img
@@ -53,6 +71,14 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 
 # Document (By langkhach270389)
 ^https:\/\/license\.pdfexpert\.com\/api\/.*\/documents\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Documents.js
+
+# Google重定向
+^https://(www.)?google.com.hk? url 307 https://www.google.com/ncr?
+^http://(www.)?google.cn url 307 https://www.google.com/ncr?
+(?<=_region=)US(?=&) url 307 KR
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
+(?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
 
 # Lightroom
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
