--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -1,4 +1,4 @@
-hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io, boxer.baidu.com, testflight.apple.com
+hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.qq.com, *.baidu.com, pan.baidu.com, www.zhihu.com, api.zhihu.com, link.zhihu.com, *.zhihu.com,vip1.kuwo.cn, vsco.co, vni.kwaiying.com, account.wps.cn, account.wps.com, ap*.intsig.net, m*.bybutter.com, api.vuevideo.net, api.picsart.c*, api.meiease.c*, ios*.prod.ftl.netflix.com, api.revenuecat.com, pan.baidu.com, license.pdfexpert.com, education.github.com, biz.caiyunapp.com, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, -redirector*.googlevideo.com, *.amemv.com, aweme*.snssdk.com, *.pornhub.com, cn.pornhubpremium.com, buy.itunes.apple.com,notability.com, baimiao.uzero.cn, photos.adobe.io, testflight.apple.com
 
 
 # 微信公众号广告 (By Choler)
@@ -70,12 +70,12 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https:\/\/license\.pdfexpert\.com\/api\/.*\/documents\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Documents.js
 
 # Google重定向
-^https://(www.)?google.com.hk? url 307 https://www.google.com/ncr?
-^http://(www.)?google.cn url 307 https://www.google.com/ncr?
-(?<=_region=)US(?=&) url 307 KR
-(?<=&mcc_mnc=)4 url 307 2
-^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
-(?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
+#^https://(www.)?google.com.hk? url 307 https://www.google.com/ncr?
+#^http://(www.)?google.cn url 307 https://www.google.com/ncr?
+#(?<=_region=)US(?=&) url 307 KR
+#(?<=&mcc_mnc=)4 url 307 2
+#^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
+#(?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
 
 # Lightroom
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
