--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -70,12 +70,12 @@ https://api.zhihu.com/v4/questions url script-response-body https://raw.githubus
 ^https:\/\/license\.pdfexpert\.com\/api\/.*\/documents\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Documents.js
 
 # Google重定向
-#^https://(www.)?google.com.hk? url 307 https://www.google.com/ncr?
-#^http://(www.)?google.cn url 307 https://www.google.com/ncr?
-#(?<=_region=)US(?=&) url 307 KR
-#(?<=&mcc_mnc=)4 url 307 2
-#^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
-#(?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
+^https://(www.)?google.com.hk? url 307 https://www.google.com/ncr?
+^http://(www.)?google.cn url 307 https://www.google.com/ncr?
+(?<=_region=)US(?=&) url 307 KR
+(?<=&mcc_mnc=)4 url 307 2
+^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) url 302  $1$3
+(?<=\d\/\?\w{7}_\w{4}=)1[6-9]..(?=.?.?&) url 307 17
 
 # Lightroom
 ^https:\/\/photos\.adobe\.io\/v2\/accounts* url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/lightroom.js
