--- a/Rewrite/Rewrite_Search.conf
+++ b/Rewrite/Rewrite_Search.conf
@@ -49,7 +49,7 @@
 
 
 
-hostname = duckduckgo.com,www.google.com,www.google.com.*
+hostname = duckduckgo.com,www.google.com.*
 
 #gm   (Google图片)
 ^https:\/\/duckduckgo.com\/\?q=gm\+([^&]+).+ url 302 https://www.google.com/search?&tbm=isch&q=$1
