--- a/Rewrite/Js.conf
+++ b/Rewrite/Js.conf
@@ -3,6 +3,7 @@ hostname = api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, m.weibo.cn, mp.weixin.
 
 # 微信公众号广告 (By Choler)
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Wechat.js
+^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 
 # 酷我音乐 SVIP (By yxiaocai)
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/user\/vip|vip\/spi/mservice) url script-response-body https://raw.githubusercontent.com/passat/QuanX/main/Scripts/Kuwo.js
